<resources>
    <string name="app_name">OnliLib</string>
    <string name="by_bhawna_chauhan">By - Bhawna Chauhan</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="app_intro">A new way to manage Library.Manage your all things using our Android Application OnliLib</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">xyz@gmail.com</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up_description_text">Hey please enter your details</string>
    <string name="enter_your_name_email_id_and_password_to_register_with_us">Enter your email id and password, to register with us</string>
</resources>