<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAD4DB"
    tools:context=".activities.IntroActivity">


    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/pink"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="216dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/intro_dia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name_intro" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="#55031E"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="355dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_intro"
        android:textColor="#640223"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/shape_button_rounded"
        android:backgroundTint="@null"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/white_border_shape_button_rounded"
        android:backgroundTint="@null"
        android:text="@string/sign_up"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_intro"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>